compile_log_feed.txt
cargo :     Blocking waiting for 
file lock on package cache
At line:1 char:1
+ cargo check --target 
wasm32-unknown-unknown 2>&1 | 
Out-File compile_l ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~
    + CategoryInfo          : NotSpe 
   cified: (    Blocking wa...n pac  
  kage cache:String) [], RemoteExc   
 eption
    + FullyQualifiedErrorId : Native 
   CommandError
 
    Blocking waiting for file lock 
on package cache
    Blocking waiting for file lock 
on package cache
    Checking glassbox v0.1.0 (D:\AI 
and  datascience projects\Project 
8\glassbox)
warning: unused import: 
`crate::model::db::DB`
 --> src\components\feed.rs:1:5
  |
1 | use crate::model::db::DB;
  |     ^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` 
(part of `#[warn(unused)]`) on by 
default

warning: unused import: 
`leptos::attr::Selected`
 --> src\components\search.rs:1:5
  |
1 | use leptos::attr::Selected;
  |     ^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `save_video`
 --> src\components\search.rs:6:34
  |
6 | use crate::model::video::{Video, 
save_video};
  |                                  
^^^^^^^^^^

error[E0433]: failed to resolve: use 
of undeclared type `DB`
 --> src\components\feed.rs:7:14
  |
1 | use crate::model::db::DB;
  |     -------------------- help: 
`DB` is defined here, but is not a 
type
...
7 |     let db = DB::get();
  |              ^^ use of 
undeclared type `DB`

error[E0425]: cannot find function 
`fetch_history` in this scope
  --> src\components\feed.rs:25:44
   |
25 |     let history = 
Resource::new(|| (), |_| 
fetch_history());
   |                                 
           ^^^^^^^^^^^^^ not found 
in this scope

error[E0282]: type annotations needed
  --> src\components\feed.rs:35:38
   |
35 |                     
Some(videos) if !videos.is_empty() 
=> view! {
   |                                 
     ^^^^^^ cannot infer type

warning: unused variable: 
`u_for_session`
  --> src\pages\login.rs:30:13
   |
30 |         let u_for_session = 
u_val.clone(); 
   |             ^^^^^^^^^^^^^ help: 
if this is intentional, prefix it 
with an underscore: `_u_for_session`
   |
   = note: 
`#[warn(unused_variables)]` (part of 
`#[warn(unused)]`) on by default

warning: unused variable: `video`
  --> src\model\video.rs:29:25
   |
29 | pub async fn save_video(video: 
Video) -> Result<Video, String> {
   |                         ^^^^^ 
help: if this is intentional, prefix 
it with an underscore: `_video`

Some errors have detailed 
explanations: E0282, E0425, E0433.
For more information about an error, 
try `rustc --explain E0282`.
warning: `glassbox` (bin "glassbox") 
generated 5 warnings
error: could not compile `glassbox` 
(bin "glassbox") due to 3 previous 
errors; 5 warnings emitted
